[tool.poetry]
name = "text_explore"
version = "0.0.1"
description = "A Python Package to perform Exploratory Data Analysis on Text Data."
authors = ["Temiloluwa Awoyele <awoyeletemiloluwa@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"
